# Tersel

./: .gitignore  pyproject.toml  readme.md  requirements.txt  sample.py  setup.py
.github/workflows/: python-publish.yml
tersel/: Option.py  OptionList.py  __init__.py
